--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@ body, html {
   background: #f5f5f5;
 }
 
+.medicine-section{
+   padding: 100px 40px;
+  text-align: center;
+  background: aquamarine;
+}
+
 .section.dark {
   background: #1e1e2f;
   color: white;
